--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,8 @@ jobs:
     - name: Build Binary
       run: |
         docker build -t builder .
-        docker run --rm -v ${PWD}:/project builder make
+        docker run --rm builder dkp-pacman -Syu --noconfirm
+        docker run -v ${PWD}:/project builder make
     - uses: actions/upload-artifact@v3
       with:
         name: Time_Sync.wps
