--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,12 +6,18 @@ jobs:
   build-binary:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout Code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
     - name: Build Binary
       run: |
         docker build -t builder .
         docker run --rm -v ${PWD}:/project builder make
-    - uses: actions/upload-artifact@v4
+
+    - name: Upload Time_Sync.wps
+      uses: actions/upload-artifact@v4
       with:
         name: Time_Sync.wps
         path: "*.wps"
