--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,5 +29,5 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: Time_Sync.wps
-        path: "*.wps"
+        path: "src/*.wps"
         if-no-files-found: error
