Updated autoconf macros.

--- a/configure.ac
+++ b/configure.ac
@@ -8,8 +8,8 @@ AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_SRCDIR([src/main.cpp])
 
-WUPS_INIT
-WUMS_INIT
+WIIU_WUPS_INIT
+WIIU_WUMS_INIT
 
 AM_INIT_AUTOMAKE([foreign])
 
@@ -20,8 +20,8 @@ AM_PROG_AR
 AX_APPEND_COMPILE_FLAGS([-std=c++23], [CXXFLAGS])
 AC_LANG([C++])
 
-WUMS_LIB_CURLWRAPPER
-WUMS_LIB_NOTIFICATIONS
+WIIU_WUMS_CHECK_LIB_CURLWRAPPER
+WIIU_WUMS_CHECK_LIB_NOTIFICATIONS
 
 
 AC_DEFINE([PLUGIN_NAME],
@@ -39,21 +39,6 @@ AC_DEFINE([PLUGIN_AUTHOR],
 AC_DEFINE([PLUGIN_LICENSE],
           ["MIT"],
           [The license.])
-
-
-# Join all flags into a single variable, we use them in all nested Makefiles
-
-AS_VAR_SET([ALL_CPPFLAGS], ["$PORTLIBS_CPPFLAGS $WUMS_CPPFLAGS $WUPS_CPPFLAGS $WUT_CPPFLAGS"])
-AC_SUBST([ALL_CPPFLAGS])
-
-AS_VAR_SET([ALL_CXXFLAGS], ["$WUT_CFLAGS -ffunction-sections -fipa-pta"])
-AC_SUBST([ALL_CXXFLAGS])
-
-AS_VAR_SET([ALL_LDFLAGS], ["$WUT_LDFLAGS $WUPS_LDFLAGS"])
-AC_SUBST([ALL_LDFLAGS])
-
-AS_VAR_SET([ALL_LIBS], ["$PORTLIBS_LIBS $WUMS_LIBS $WUPS_LIBS $WUT_LIBS"])
-AC_SUBST([ALL_LIBS])
 
 
 AC_CONFIG_FILES([Makefile
