--- a/src/wupsxx/Makefile.am
+++ b/src/wupsxx/Makefile.am
@@ -1,8 +1,7 @@
 # src/wupsxx/Makefile.am
 
-AM_CPPFLAGS = $(ALL_CPPFLAGS)
-
-AM_CXXFLAGS = $(ALL_CXXFLAGS)
+AM_CPPFLAGS = $(DEVKITPRO_CPPFLAGS)
+AM_CXXFLAGS = $(DEVKITPRO_CXXFLAGS)
 
 
 noinst_LIBRARIES = libwupsxx.a
