--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,7 +4,7 @@ SUBDIRS = net wupsxx
 
 
 AM_CPPFLAGS = $(DEVKITPRO_CPPFLAGS)
-AM_CXXFLAGS = $(DEVKITPRO_CXXFLAGS)
+AM_CXXFLAGS = $(DEVKITPRO_CFLAGS)
 AM_LDFLAGS = $(DEVKITPRO_LDFLAGS)
 LIBS = $(DEVKITPRO_LIBS)
 
