--- a/src/net/Makefile.am
+++ b/src/net/Makefile.am
@@ -1,7 +1,7 @@
 # src/net/Makefile.am
 
 AM_CPPFLAGS = $(DEVKITPRO_CPPFLAGS)
-AM_CXXFLAGS = $(DEVKITPRO_CXXFLAGS)
+AM_CXXFLAGS = $(DEVKITPRO_CFLAGS)
 
 
 noinst_LIBRARIES = libnet.a
