Updated autoconf macros.

--- a/configure.ac
+++ b/configure.ac
@@ -21,8 +21,8 @@ AM_PROG_AR
 AX_APPEND_COMPILE_FLAGS([-std=c++23], [CXXFLAGS])
 AC_LANG([C++])
 
-WIIU_WUMS_CHECK_LIB_CURLWRAPPER
-WIIU_WUMS_CHECK_LIB_NOTIFICATIONS
+WIIU_WUMS_CHECK_LIBCURLWRAPPER
+WIIU_WUMS_CHECK_LIBNOTIFICATIONS
 
 
 AC_DEFINE([PLUGIN_NAME],
@@ -41,6 +41,7 @@ AC_DEFINE([PLUGIN_LICENSE],
           ["MIT"],
           [The license.])
 
+AM_EXTRA_RECURSIVE_TARGETS([run])
 
 AC_CONFIG_FILES([Makefile
                  src/Makefile
