Use external libwupsxx, renamed logging module to logger.

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,11 @@ EXTRA_DIST = \
 	LICENSE.md \
 	README.md
 
-SUBDIRS = src
+
+SUBDIRS = \
+	external/libwupsxx \
+	src
+
 
 @INC_AMINCLUDE@
 DISTCLEANFILES = $(AMINCLUDE)
