- Use `button_item` for button-like items. - Changed `core::run()` to throw exceptions.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,7 +8,7 @@ AM_CPPFLAGS = \
 	$(DEVKITPRO_CPPFLAGS)
 
 AM_CXXFLAGS = \
-	-Wall -Wextra \
+	-Wall -Wextra -Werror \
 	$(DEVKITPRO_CFLAGS)
 
 AM_LDFLAGS = $(DEVKITPRO_LDFLAGS)
