--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: Build Binary
 
-# on: [push, pull_request, workflow_dispatch]
-on: [workflow_dispatch]
+on: [push, pull_request, workflow_dispatch]
+# on: [workflow_dispatch]
 
 jobs:
   build-plugin:
