--- a/configure.ac
+++ b/configure.ac
@@ -13,6 +13,7 @@ AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_SRCDIR([src/ntp.cpp])
 
 WIIU_WUPS_INIT
+WIIU_WUMS_INIT
 
 AM_INIT_AUTOMAKE([foreign subdir-objects])
 
@@ -23,6 +24,8 @@ AM_PROG_AR
 AX_APPEND_COMPILE_FLAGS([-std=c++23], [CXX])
 AC_LANG([C++])
 
+WIIU_WUPS_SETUP
+WIIU_WUMS_SETUP
 WIIU_WUMS_CHECK_LIBCURLWRAPPER
 WIIU_WUMS_CHECK_LIBNOTIFICATIONS
 
